fix overflow with surf section in  activites

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,6 +283,14 @@ footer{
     
 }
 
+#surf-outer{
+    height: 300px;
+    width: 100%;    
+    background-size: 100%;
+    overflow: hidden;
+
+}
+
 #surf {
 	padding: 1rem 0;	
 	background: url(../images/SPSurf.webp) center center / cover no-repeat fixed;    
@@ -293,6 +301,12 @@ footer{
     /* background: url(../images/hero-image.webp) no-repeat center center; */
     background-size: 100%;
     overflow: hidden;
+
+/*     height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center;
+    background-size: 100%;
+    overflow: hidden; */
 
 }
 #walk {
